refactor(domain): Intersection 내부 확인 메서드 리팩토링